Chore: renamed RocketLauncherHandler class Add: ShadowJar